Projet GL/Projet_GL/src/test/deca/syntax/invalid/bad_car.deca
// Description:
//    Programme contenant un caractere inatendu 
//
// Resultats:
//    recognition error "²"
//
// Historique:
//    cree le 10/01/2023


{
    print("Hello world");

    ²
    
    print("Hello world);
}
